Debug panel style added from Bootstrap template

--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -42,7 +42,7 @@
 /*traceView/trace-view.css governs the gutter style:
 .ace_gutter-cell.seecoderun-gutter-decoration
 */
-/*Cahnged in ace/theme*/
+/*Changed in ace/theme*/
 /*.ace-chrome .ace_gutter {*/
 /*    background-color: #E5F1FB;*/
 /*}*/
