Adds new Debug panels logic. Now the panels heading works as toolbars and expand on demand . Fixes #137

--- a/src/visViewer/vis-viewer.css
+++ b/src/visViewer/vis-viewer.css
@@ -1,3 +1,17 @@
 #seePanelBody > div{
     padding-bottom: 4px;
 }
+
+.vis-container {
+    padding-top: 4px;
+    box-shadow: 1px 1px 1px 1px #eee;
+}
+
+ .vis-container .visualization-title {
+   font-size: 16px !important;
+   font-weight: bold;
+ }
+
+ #visualizations {
+   padding-top: 5px;
+ }
