--- a/styles/navigation-bar.css
+++ b/styles/navigation-bar.css
@@ -5,7 +5,12 @@
     margin-bottom: 0px;
 }
 
-#navbar-collapse-1 li > div {
+#navbar-collapse-left li > div {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+#navbar-collapse-right li > div {
     padding-left: 8px;
     padding-right: 8px;
 }
@@ -14,14 +19,17 @@
     padding-left: 4px;
 }
 
-.navbar-xs .navbar-header{
-    min-height:28px;
-    height: 28px;
-}
 .navbar-xs .navbar-brand{
     padding: 0px 4px;
     font-size: 16px;
     line-height: 20px;
+    min-height:28px;
+    height: 28px;
+    width: 100px;
+}
+
+.navbar-xs .navbar-brand:hover{
+    cursor: pointer;
 }
 
 .navbar-xs .navbar-brand .material-icons {
