fixes console's pretty print and animation buffering of console feedback. new template for branch highlighting. stop console error print

--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -65,6 +65,12 @@
     border: none;
 }
 
+.ace-chrome .ace_marker-layer .red-marker {
+    position: absolute;
+    background: rgb(250, 170, 170);
+    border: none;
+}
+
 .ace-chrome .ace_marker-layer .seecoderun-blue-marker {
     position: absolute;
     background: #00398D;
@@ -74,7 +80,7 @@
 
 .ace-chrome .ace_marker-layer .error-marker {
     position: absolute;
-    background: rgb(250, 170, 170);
+    background: #ffe6e6;
     border: none;
 }
 
@@ -86,14 +92,18 @@
 
 .ace-chrome .ace_marker-layer .function-marker {
     position: absolute;
-    background: none;
+    background-color: transparent;
     border: none;
+    margin-left: -5px;
     border-left: 2px solid #0066ff;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
 }
 
 .ace-chrome .ace_marker-layer .block-marker {
     position: absolute;
-    background: none;
+    background-color: transparent;
     border: none;
     border-left: 1px solid green;
 }
