Gutter is now integrated with the editor tooltip

--- a/src/jsGutter/js-gutter.css
+++ b/src/jsGutter/js-gutter.css
@@ -50,3 +50,11 @@
      background: #eeeeee;
    }
  }
+
+ .js-gutter-entry{
+      display: inline-block;
+ }
+
+ .js-gutter-entry:hover{
+      background: #E5F1FB;
+ }
