Added Object Explorer and Utils to render Any JS Object.

--- a/src/pastebin/pastebin.css
+++ b/src/pastebin/pastebin.css
@@ -53,6 +53,7 @@
 
 #right-splitter-top{
    border-top: 1px solid #eee;
+   overflow: hidden;
 }
 #right-splitter-bottom{
     bottom: 0px;
@@ -71,6 +72,13 @@
 
 #visualization-container{
     padding-top: 5px;
+    min-height: 100%;
+    /*overflow: hidden;*/
+}
+
+#visualization-container .panel-body{
+    padding: 0;
+    overflow: auto;
 }
 
 #visualization-container .panel {
