--- a/src/visViewer/vis-viewer.css
+++ b/src/visViewer/vis-viewer.css
@@ -4,11 +4,11 @@
 
 .vis-container {
     padding-top: 4px;
-    box-shadow: 1px 1px 1px 1px #eee;
+    /*box-shadow: 1px 1px 1px 1px #eee;*/
 }
 
  .vis-container .visualization-title {
-   font-size: 16px !important;
+   font-size: 16px;
    font-weight: bold;
  }
 
