Adds object explorer text to JsGutter and new format for line entries

--- a/src/jsGutter/js-gutter.css
+++ b/src/jsGutter/js-gutter.css
@@ -52,7 +52,11 @@
  }
 
  .js-gutter-entry{
-      display: inline-block;
+    display: inline-block;
+    max-width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
  }
 
  .js-gutter-entry:hover{
