--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -112,6 +112,33 @@
     border-left: 1px solid green;
 }
 
+.ace-chrome .ace_marker-layer .disable-marker {
+  position: absolute;
+  background-color: lightgrey;
+  opacity: 0.2;
+  border: none;
+}
+
+.ace-chrome .ace_marker-layer .transparent-marker {
+  position: absolute;
+  background-color: inherit;
+  border: solid 1px blue;
+}
+
+.ace-chrome .ace_marker-layer .branch-global-marker {
+  position: absolute;
+  background-color: blue;
+  opacity: 0.03;
+  border: none;
+}
+
+.ace-chrome .ace_marker-layer .branch-local-marker {
+  position: absolute;
+  background-color: red;
+  opacity: 0.03;
+  border: none;
+}
+
 .ace-chrome .ace_marker-layer .git-line-added-marker {
     position: absolute;
     background-color: #eaffea;
