--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -127,16 +127,26 @@
 
 .ace-chrome .ace_marker-layer .branch-global-marker {
   position: absolute;
-  background-color: blue;
-  opacity: 0.03;
-  border: none;
+  background-color: rgba(0, 0, 255, 0.01);
+  border: 1px blue;
+  border-style: none none none solid;
+  margin-left: -4px;
+
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .ace-chrome .ace_marker-layer .branch-local-marker {
   position: absolute;
-  background-color: red;
-  opacity: 0.03;
-  border: none;
+  background-color: rgba(255, 165, 0, 0.02);
+  border: 1px orange;
+  border-style: none none none solid;
+  margin-left: -4px;
+
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
 }
 
 .ace-chrome .ace_marker-layer .git-line-added-marker {
