--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -131,6 +131,7 @@
     -moz-border-radius: 0;
     -o-border-radius: 0;
     border-radius: 0;
+    overflow: auto;
 }
 
 #editorTooltipContent .custom-popover-title{
