--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -131,6 +131,10 @@
     -moz-border-radius: 0;
     -o-border-radius: 0;
     border-radius: 0;
+    overflow: auto;
+    max-width: 53%;
+    max-height: 70%;
+
 }
 
 #editorTooltipContent .custom-popover-title{
