gave max size temporarily, want to make it adjust depending on user size change

--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -132,6 +132,10 @@
     -o-border-radius: 0;
     border-radius: 0;
     overflow: auto;
+    max-width: 53%;
+    max-height: 70%;
+
+
 }
 
 #editorTooltipContent .custom-popover-title{
