Fixes #190. Adds custom left gutter renderer: now it support elements besides text. Now navigation info is top-left and with smaller font than line numbers. Adds different navigator styles. Call Graph(visualizations) now fills container. New behavior for search and visualization interaction. Fixes library imports with cross-origin references. Added output.html as client code for iframe

--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -158,6 +158,13 @@
   border-radius: 0;
 }
 
+#editorTooltipContent {
+  max-height: 800px;
+  max-width: 600px;
+  overflow: auto;
+  padding-right: 4px;
+}
+
 #editorTooltipContent .custom-popover-title {
   line-height: 14px;
   font-size: 10px;
