--- a/src/chat/chat.css
+++ b/src/chat/chat.css
@@ -193,7 +193,7 @@
 }
 
 .seecoderun-chat ul .seecoderun-chat-username {
-  margin-right: 10px
+  margin-right: 10px;
   float: left;
 }
 
@@ -231,7 +231,7 @@
 }
 
 .seecoderun-chat footer input::-webkit-input-placeholder {
-  color: rgba(52, 73, 94, .4)
+  color: rgba(52, 73, 94, .4);
 }
 
 .seecoderun-chat footer input::-moz-placeholder {
@@ -239,11 +239,11 @@
 }
 
 .seecoderun-chat footer input:-ms-input-placeholder {
-  color: rgba(52, 73, 94, .4)
+  color: rgba(52, 73, 94, .4);
 }
 
 .seecoderun-chat footer input::placeholder {
-  color: rgba(52, 73, 94, .4)
+  color: rgba(52, 73, 94, .4);
 }
 
 .seecoderun-chat header {
