--- a/src/visViewer/vis-viewer.css
+++ b/src/visViewer/vis-viewer.css
@@ -1,27 +1,39 @@
-#seePanelBody > div{
-    padding-bottom: 4px;
+#seePanelBody > div {
+  padding-bottom: 4px;
+  min-height: inherit;
+  height: inherit;
 }
 
 .vis-container {
-    padding-top: 4px;
-    /*box-shadow: 1px 1px 1px 1px #eee;*/
+  /*padding-top: 4px;*/
+  /*box-shadow: 1px 1px 1px 1px #eee;*/
+  min-height: inherit;
+  height: inherit;
 }
 
- .vis-container .visualization-title {
-   font-size: 16px;
-   font-weight: bold;
- }
+.vis-container .visualization-title {
+  font-size: 16px;
+  font-weight: bold;
+}
 
- #visualizations {
-   padding-top: 5px;
- }
+.scatter-plot {
+  overflow: visible;
+  padding-left: 2px;
+  padding-right: 2px;
+}
 
- .scatter-plot {
-     overflow: scroll;
- }
- .data-table {
-      overflow: scroll;
- }
- .call-graph{
-      overflow: visible;
- }
+.data-table {
+  overflow: auto;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.call-graph {
+  overflow: visible;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.svg-container {
+  padding-top: 4px;
+}
