--- a/src/pastebin/pastebin.css
+++ b/src/pastebin/pastebin.css
@@ -65,9 +65,10 @@
 }
 
 #webAppViewer {
+  frameborder: 0;
     border: none;
     width: 100%;
-    height: 99%;
+  height: 100%;
 }
 
 #visualization-container{
