--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -157,7 +157,7 @@
 
 .popover {
   padding: 0px;
-  margin: 0px;
+  margin: auto;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -o-border-radius: 0;
