--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -163,6 +163,7 @@
   -o-border-radius: 0;
   border-radius: 0;
   vertical-align: bottom;
+  overflow: auto;
   min-height: 10px;
   min-width: 20px;
   max-height: 800px;
