--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -70,17 +70,11 @@
 }
 
 .ace_gutter-cell.seecoderun-gutter-decoration-branch-local:hover::before {
-  display: block;
-  float: left;
-  width: 0;
-  height: 100%;
-  border-left: 1px solid #FFF;
-  content: '';
+  font-s: 1.0;
 }
 
 .ace_gutter-cell.seecoderun-gutter-decoration-branch-local:hover {
-  color: #FFF;
-  background-color: orange;
+  opacity: 1.0;
 }
 
 /*.ace_gutter-cell.seecoderun-gutter-decoration-branch-local:hover::before {*/
@@ -156,18 +150,13 @@
 }
 
 .popover {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -o-border-radius: 0;
   border-radius: 0;
   vertical-align: bottom;
-  overflow: auto;
-  min-height: 10px;
-  min-width: 20px;
-  max-height: 800px;
-  max-width: 600px;
   /*position: fixed;*/
 }
 
@@ -177,6 +166,8 @@
 }
 
 #editorTooltipContent {
+  max-height: 800px;
+  max-width: 600px;
   overflow: auto;
   padding-right: 4px;
 }
