Got it to resize according to when the space is smaller than popup
There are some obvious issues to address but I think the next thing we
can do is have an event listener that will modify the max size of
popover whenever the divgutter is changed!

--- a/src/traceView/trace-view.css
+++ b/src/traceView/trace-view.css
@@ -167,7 +167,7 @@
   min-height: 10px;
   min-width: 20px;
   /*max-height: 800px;*/
-  /*max-width: 600px;*/
+  max-width: 600px;
   /*position: fixed;*/
 }
 
