--- a/src/chat/chat.css
+++ b/src/chat/chat.css
@@ -43,6 +43,7 @@
 }
 
 .seecoderun-chat {
+  display: none;
   font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   box-shadow: 0px 5px 50px rgba(0, 0, 0, .4);
   background-color: rgba(255, 255, 255, 1);
