--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -28,7 +28,7 @@
   max-height: 500px;
   overflow: auto;
   margin: auto;
-  border: 1px solid lightgrey;
+  border: 1px solid lightsalmon;
 }
 
 .metag-popover {
