Aded new logo. Fixes #215

--- a/styles/w3.css
+++ b/styles/w3.css
@@ -275,9 +275,9 @@ hr {
     margin: 20px 0
 }
 
-img {
-    margin-bottom: -5px
-}
+/*img {*/
+    /*margin-bottom: -5px*/
+/*}*/
 
 a {
     color: inherit
