--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -190,3 +190,36 @@
   background-color: #a6f3a6;
   border: none;
 }
+
+
+/***Colors for highlighting lines in graphical analysis***/
+.ace-chrome .ace-marker-layer .graphical-analysis-red-marker {
+  position: absolute;
+  border: none;
+  background-color: #fc6360;
+}
+.ace-chrome .ace-marker-layer .graphical-analysis-orange-marker {
+  position: absolute;
+  border: none;
+  background-color: #f7a550;
+}
+.ace-chrome .ace-marker-layer .graphical-analysis-yellow-marker {
+  position: absolute;
+  border: none;
+  background-color: #f5cd56;
+}
+.ace-chrome .ace-marker-layer .graphical-analysis-green-marker {
+  position: absolute;
+  border: none;
+  background-color: #70ca57;
+}
+.ace-chrome .ace-marker-layer .graphical-analysis-blue-marker{
+  position: absolute;
+  border: none;
+  background-color: #51b9f1;
+}
+.ace-chrome .ace-marker-layer .graphical-analysis-purple-marker {
+  position: absolute;
+  border: none;
+  background-color: #d1a6db;
+}
