--- a/src/ace/ace-editor.css
+++ b/src/ace/ace-editor.css
@@ -191,35 +191,28 @@
   border: none;
 }
 
-
 /***Colors for highlighting lines in graphical analysis***/
 .ace-chrome .ace_marker-layer .graphical-analysis-red-marker {
   position: absolute;
-  border: none;
-  background-color: #fc8b7a;
+  border: 2px dashed rgba(252, 139, 122, 0.69);
 }
 .ace-chrome .ace_marker-layer .graphical-analysis-orange-marker {
   position: absolute;
-  border: none;
-  background-color: #ffa954;
+  border: 2px dashed rgba(255, 169, 84, 0.51);
 }
 .ace-chrome .ace_marker-layer .graphical-analysis-yellow-marker {
   position: absolute;
-  border: none;
-  background-color: #ffda33;
+  border: 2px dashed rgba(244, 223, 8, 0.9);
 }
 .ace-chrome .ace_marker-layer .graphical-analysis-green-marker {
   position: absolute;
-  border: none;
-  background-color: #8ef261;
+  border: 2px dashed rgba(142, 242, 97, 0.65);
 }
 .ace-chrome .ace_marker-layer .graphical-analysis-blue-marker{
   position: absolute;
-  border: none;
-  background-color: #54c4ff;
+  border: 2px dashed rgba(84, 196, 255, 0.8);
 }
 .ace-chrome .ace_marker-layer .graphical-analysis-purple-marker {
   position: absolute;
-  border: none;
-  background-color: #e1b5eb;
+  border: 2px dashed rgba(225, 181, 235, 0.78);
 }
