adds custom Inpector builder, rescues expandPaths state. Adds hightlighting from table

--- a/scr-app/src/containers/LiveExpressionStore.css
+++ b/scr-app/src/containers/LiveExpressionStore.css
@@ -1,6 +1,8 @@
 .monaco-editor-decoration-les-expressionLive {
   opacity: 1;
   filter: unset !important;
+  font-weight: 500;
+  /*font-size-adjust: 1.5;*/
 }
 
 .monaco-editor-decoration-les-textHighlight {
