--- a/scr-app/src/utils/LiveExpressionWidgetProvider.css
+++ b/scr-app/src/utils/LiveExpressionWidgetProvider.css
@@ -1,4 +1,6 @@
 .monaco-editor-decoration-lwp-expression {
-  opacity: 0.75;
-  filter: grayscale(25%);
+  opacity: 0.70;
+  filter: grayscale(30%);
+  font-weight: 100;
+  /*font-size-adjust: 0.5;*/
 }
