new default example. Makes Jsx line decorations... Reactly

--- a/scr-app/src/utils/JSXColoringProvider.css
+++ b/scr-app/src/utils/JSXColoringProvider.css
@@ -1,6 +1,6 @@
 .glyph.Identifier.JsxElement {
-  background: lightsalmon;
-  opacity: 0.2;
+  background: #61dafb;
+  opacity: 0.25;
 }
 
 .mtk12.Identifier.JsxElement.Bracket {
