--- a/scr-app/src/core/modules/ALE.css
+++ b/scr-app/src/core/modules/ALE.css
@@ -2,54 +2,64 @@
     font-size: 90%;
     font-weight: normal;
     opacity: 0.647;
-    /*color: lightcoral;*/
+    /*color: palevioletred;*/
 }
 
 .ale.branch.function.active {
     font-size: 110%;
-    font-weight: bold;
+    /*font-weight: bold;*/
     opacity: 1;
-    /*color: tomato;*/
+    /*color: gold;*/
 }
 
 .ale.branch.function.hover {
     font-size: 110%;
     font-weight: bold;
     opacity: 1;
-    color: tomato;
+    /*color: tomato;*/
 }
 
 .ale.branch.control.normal {
     font-size: 90%;
     font-weight: normal;
-    opacity: 0.647;
-    /*color: lightcoral;*/
+    /*opacity: 0.647;*/
+    /*color: grey;*/
+    filter: contrast(0.33);
 }
 
 .ale.branch.control.active {
     font-size: 110%;
-    font-weight: bold;
+    /*font-weight: bold;*/
     opacity: 1;
+    filter: contrast(1);
     /*color: tomato;*/
 }
 
- .ale.branch.control.hover {
-     font-size: 110%;
-     font-weight: bold;
-     opacity: 1;
-     /*color: tomato;*/
- }
+.ale.branch.control.hover {
+    background-color: rgba(0, 0, 255, 0.08);
+}
 
 .ale.value.normal {
     font-size: 95%;
-    filter: contrast(0.647);
-    /*color: coral;*/
+    /*filter: contrast(0.647);*/
+    filter: contrast(0.33);
+    transition-duration: 250ms;
+    transition-property: filter, color;
+    transition-timing-function: ease-in-out;
+    /*color: seagreen;*/
 }
+
+/*.ale.value.normal:hover {*/
+/*    filter: contrast(0.85);*/
+/*    color: coral;*/
+/*}*/
+
 
 .ale.value.active {
     font-size: 100%;
     filter: contrast(1);
-    /*color: darkslateblue;*/
+    /*color: crimson;*/
+    /*color: darkgreen;*/
 }
 
 .ale.expression.hover {
@@ -57,17 +67,18 @@
     font-weight: bold;
 }
 
-.ale.import {
+.ale.import.normal {
     font-size: 95%;
     filter: contrast(0.647);
     font-weight: normal;
-    color: cornflowerblue;
+    /*color: cornflowerblue;*/
 }
 
 .ale.import.active {
     font-size: 100%;
     filter: contrast(1);
     font-weight: bold;
+    /*color: red;*/
 }
 
 .ale.import.hover {
